--- a/C09/ex01/Makefile
+++ b/C09/ex01/Makefile
@@ -1,42 +1,42 @@
-NAME =
-		libft.a
-
-SRC =
-		./srcs/ft_putchar.c\
-		./srcs/ft_swap.c\
-		./srcs/ft_putstr.c\
-		./srcs/ft_strlen.c\
-		./srcs/ft_strcmp.c
-
-OBJECTS =
-		./srcs/ft_putchar.o\
-         	./srcs/ft_swap.o\
-         	./srcs/ft_putstr.o\
-         	./srcs/ft_strlen.o\
-         	./srcs/ft_strcmp.o
- 
-HEADER =
-		./includes/ft.h
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: cmariot <marvin@42.fr>                     +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2021/04/01 07:48:55 by cmariot           #+#    #+#              #
+#    Updated: 2021/04/01 11:14:05 by cmariot          ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
 
 
-all: $(NAME)
+NAME	= libft.a
 
-$(NAME): 
-	gcc -Wall -Wextra -Werror -c $(SRC)
-	ar rc $(NAME) $(OBJECTS)
+SRCD	= srcs/
+
+SRCS	= ft_putchar.c ft_swap.c ft_putstr.c ft_strlen.c ft_strcmp.c
+
+OBJS	= ${addprefix ${SRCD},${SRCS:.c=.o}}
+
+HEAD	= includes/ft.h
+
+CC		= gcc
+
+CFLAGS	= -Wall -Wextra -Werror
+
+.c.o:
+			${CC} ${CFLAGS} -I ${HEAD} -c $< -o ${<:.c=.o}
+
+${NAME}:	${OBJS}
+			ar -rc ${NAME} ${OBJS}
+
+all :        ${NAME}
 
 clean:
-	rm -f $(OBJECTS) 	
+			rm -f ${OBJS}
 
-fclean:	clean
-	rm -f $(NAME)
+fclean:		clean
+			rm -f ${NAME}
 
-re: fclean all
-	
-
-
-
-regle_a:
-	@echo "regle A"
-regle_b:	regle_a
-	echo "regle B" 
+re:			fclean all
